--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import url("./cart.css");
+@import url("./wishlist.css");
 @import url("./products.css");
 @import url("./home.css");
 @import url("../index.css");
