--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,6 @@
+@import url("./logout.css");
+@import url("./signup.css");
+@import url("./login.css");
 @import url("./cart.css");
 @import url("./wishlist.css");
 @import url("./products.css");
