--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,6 +38,14 @@
     background-color: var(--gray-color);
 }
 
+.black-color {
+    color: var(--black-color);
+}
+
+.gray-color {
+    color: var(--gray-color);
+}
+
 .display-flex-col {
     display: flex;
     flex-direction: column;
