--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -86,6 +86,15 @@
     text-align: right;
 }
 
+.cart-img {
+    max-width: 30rem;
+    margin: 0rem 15rem 0 20rem;
+}
+
+.cart-img>img {
+    max-width: 100%;
+}
+
 
 /* media queries */
 
